<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, TestProjectActivity!</string>
    <string name="hello_world">Hello World!!</string>
    <string name="action_settings">settings</string>
    <string name="app_name">HomeExpenses</string>
    <string name="Name">Name:</string>
    <string name="Date">Date:</string>
    <string name="Manak">Manak</string>
    <string name="Navneet">Navneet</string>
    <string name="Details">Details:</string>
    <string name="Amount">Amount:</string>
    <string name="Ok">Ok</string>
    <string name="Reset">Reset</string>
	<string name="oauth_client_id">3MVG9Y6d_Btp4xp7cIgMwQTM5KYZnBnPaBhl3rLCXZLzeqxU_P0.gHtY4PvX4G6dVP.g4eCwCJmQDk8UPGlts</string>
    <string name="oauth_callback_url">sfdc://success</string>
     <string name="api_version">v23.0</string>
    <string name="account_type">com.salesforce.androidsdk.sample</string>
</resources>